<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_do_list"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp">
    </TextView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/add"
        android:layout_below="@+id/title"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/scroll_view"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Button
        android:id="@+id/add"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20.dp"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="20sp">
    </Button>


</RelativeLayout>